# Smart-Stadiums-Tournament-Operations

./: .gitignore  Makefile  README.md  requirements.txt  vercel.json
.github/workflows/: cd-production.yml  cd-staging.yml  ci-backend.yml  ci-frontend.yml
api/: index.py
backend/: .env.example  Dockerfile  README.md  live_vercel_test.py  pyproject.toml  test_clean_rate_limit.py  verify_jwt.py  verify_neo4j.py  verify_neo4j_serverless.py  verify_submission_checks.py  verify_tiered_access.py
backend/app/: config.py  dependencies.py  main.py
backend/app/graph/: driver.py  queries.py  seed.py
backend/app/middleware/: rate_limit.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  chat.py  crowd.py  health.py  incidents.py  navigation.py
backend/app/services/: crowd_service.py  incident_service.py  navigation_service.py
backend/app/services/genai/: guardrails.py  orchestrator.py
backend/app/utils/: anonymizer.py  logging.py
backend/tests/integration/: test_gemini_flow.py  test_neo4j_queries.py
backend/tests/unit/: test_anonymizer.py  test_auth_and_rate_limit.py  test_crowd.py  test_guardrails.py  test_navigation.py
docs/: BRAIN.md  architecture-blueprint.md  runbook.md
docs/adr/: 001-neo4j-over-spanner.md  002-cloud-nat-for-auradb.md  003-fan-data-anonymization.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: StadiumMap.tsx
frontend/src/hooks/: useChat.ts  useCrowd.ts  useRoute.ts  (+1 more)
infra/terraform/: main.tf  variables.tf
(+32 files in other folders)
