[tool.poetry]
name = "stadiumai-noc-backend"
version = "0.1.0"
description = "FastAPI backend for StadiumAI NOC"
authors = ["Antigravity <antigravity@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
neo4j = "^5.21.0"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
google-cloud-pubsub = "^2.21.3"
google-genai = "^0.5.0"
structlog = "^24.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
google-auth = "^2.30.0"
bcrypt = "^4.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
